# OSDevChaquito

./: .clangd  .gitignore  CheatSheet.md  README.md
00-Prerequisites/: README.md  install_prereqs.sh
01-Bootloader/: Makefile  README.md  boot.asm  run_it.sh
02-Real-Mode/: README.md  boot.asm  run_it.sh
03-Boot-on-hw/: README.md  boot.asm
04-Changing-an-isr/: boot.asm  run_it.sh
04-Chaning-an-isr/: README.md
05-DiskAccess/: README.md  boot.asm  run_it.sh
06-ProtectedMode/: Makefile  README.md  boot.asm  debug_it.sh  run_it.sh
07-Enabling_A20_line/: Makefile  README.md
07-Enabling_A20_line/scripts/: run_it.sh
07-Enabling_A20_line/src/boot/: boot.asm
08-Cross-Compiler/: Makefile  README.md  build_binutils.sh  build_compiler.sh  install_deps.sh
09-Load-Kernel-From-Disk-To-Mem/: README.md  build.sh
09-Load-Kernel-From-Disk-To-Mem/scripts/: debug_it.sh  run_it.sh
09-Load-Kernel-From-Disk-To-Mem/src/: kernel.asm
09-Load-Kernel-From-Disk-To-Mem/src/boot/: boot.asm
09-Loadin-32bit-kern-inmem/: Makefile  README.md
09-Loadin-32bit-kern-inmem/src/: kernel.asm  linker.ld
09-Loadin-32bit-kern-inmem/src/boot/: boot.asm
10-Bootstrap-C-Binaries/: Makefile  README.md
10-Bootstrap-C-Binaries/scripts/: run_it.sh
10-Bootstrap-C-Binaries/src/: kernel.asm  kernel.c  kernel.h  linker.ld
11-PrintToSerial/: Makefile  README.md
11-PrintToSerial/scripts/: debug_it.sh  run_it.sh
11-PrintToSerial/src/: kernel.asm  kernel.c
11-PrintToSerial/src/boot/: boot.asm
11-PrintToSerial/src/io/: io.h
12-IDT/: Makefile  README.md  i686-elf-toolchain.cmake
12-IDT/scripts/: debug_it.sh
12-IDT/src/: kernel.asm  kernel.c
12-IDT/src/idt/: CMakeLists.txt  idt.asm  idt.c  idt.h
12-IDT/src/shared/: CMakeLists.txt  memory.h
13-PIC/: CMakeLists.txt  CMakePresets.json  Makefile  README.md  i686-elf-toolchain.cmake
13-PIC/scripts/: debug_it.sh  gen_nasm_compile_commands.sh  run_it.sh
13-PIC/src/: CMakeLists.txt  kernel.asm  kernel.c  linker.ld
13-PIC/src/boot/: CMakeLists.txt  boot.asm
13-PIC/src/idt/: idt.h
13-PIC/src/interrupt/: CMakeLists.txt  idt.asm  idt.c  idt.h  pic.asm  pic.c  pic.h
13-PIC/src/io/: CMakeLists.txt  io.asm  serial_comm.c  serial_comm.h
13-PIC/src/shared/: CMakeLists.txt  config.h  cpuid.asm  cpuid.h  memory.c  os_string.c  os_string.h
